<resources>
    <string name="app_name">Lodging Service System</string>
    <string name="idHint">User ID</string>
    <string name="passwordHint">Password</string>
    <string name="login">Login</string>
    <string name="chooseProPic">Choose Picture</string>
    <string name="showPass">Show password</string>
    <string name="home">Lodging Listings</string>
    <string name="manageLodging">Manage Lodging</string>
    <string name="addLodging">Add Lodging</string>
    <string name="viewLodging">My Lodging</string>
    <string name="updateLodging">Update Lodging</string>
    <string name="favouriteLodging">Favourite Lodging</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="titleHint">Title</string>
    <string name="addressHint">Address</string>
    <string name="postcodeHint">Postcode</string>
    <string name="cityHint">City</string>
    <string name="stateHint">State</string>
    <string name="countryHint">Country</string>
    <string name="priceHint">Price</string>
    <string name="facility">Facility</string>
    <string name="washingMachine">Washing Machine</string>
    <string name="waterHeater">Water Heater</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="descriptionHint">Description</string>
    <string name="createLodging">Create Lodging</string>
    <string name="keyword">Keyword</string>
    <string name="chat">Chat Room</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="viewLodgingDetails">View Lodging Details</string>
    <string name="viewMessage">View Message</string>
    <string name="addFavourite">Add to favourite</string>
    <string name="removeFavourite">Remove from favourite</string>
    <string name="favouriteDetail">Favourite Details</string>
    <string name="aboutUs">About Us</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>

    <string-array name="lodgingType">
        <item>Choose your lodging type</item>
        <item>Landed</item>
        <item>Condominium</item>
        <item>Apartment</item>
        <item>Flat</item>
    </string-array>

    <string-array name="feedbackType">
        <item>Bug</item>
        <item>Improvement</item>
    </string-array>

    <string-array name="state">
        <item>Penang-5</item>
        <item>Selangor-10</item>
        <item>Johor-2</item>
        <item>Sabah-1</item>
        <item>Sarawak-1</item>
        <item>Malacca-8</item>
        <item>Perak-7</item>
        <item>Kedah-3</item>
        <item>Terengganu-6</item>
        <item>Pahang-7</item>
        <item>Kelantan-4</item>
        <item>Negeri Sembilan-9</item>
        <item>Perlis-2</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="private_chat">Private Chat</string>
    <string name="AppointmentID">Appointment ID:</string>
    <string name="location">Location</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="Cancel">Cancel</string>
    <string name="viewAppointment">View Appointment</string>
    <string name="previous_month">Previous month</string>
    <string name="next_month">Next month</string>
    <string name="john_doe">John Doe</string>
    <string name="hi_man_how_are_you">hi man, how are you?</string>
    <string name="_11_40">11:40</string>
    <string name="code_generator">Code Generator</string>
</resources>
