<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:gravity="center"
    tools:context="com.example.johnn.lodgingservicesystemstudent.Login">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Lodging Service System"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/userIdEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:textAlignment="center"
        android:hint="@string/idHint"/>

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userIdEt"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:hint="@string/passwordHint"/>

    <CheckBox
        android:id="@+id/showPassChk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEt"
        android:text="@string/showPass"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/showPassChk"
        android:text="@string/login"
        android:onClick="Login"/>




</RelativeLayout>

